samples/_failures_safe/1761393549_3482fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aca829fd.c: In function ‘main’:
./samples/SAFE/__tmp_aca829fd.c:155:9: error: expected declaration or statement at end of input
  155 |         choice = read_int("Enter your choice (1-4): ", 1, 4);
      |         ^~~~~~
./samples/SAFE/__tmp_aca829fd.c:155:9: error: expected declaration or statement at end of input
